@@ -1,4 +1,5 @@
 Version 1.8.1
+  * Make all demos running within docker
   * Deploy demo HTML UI from github from the Dockerfile
   * Add demo ZOO-Services build in the Dockerfile
 Version 1.8.0
